package com.pingpong.packet.gen;

message FullPacket {

    enum PacketType {
        Ping = 1;
        Pong = 2;
        Error = 3;
    }

    required PacketType type = 1;
    required int32 protocol = 2;
    required int32 apiVersion = 3;
    required bytes packet = 4;
}