package com.pingpong.packet.gen;

message PingPacket {
    required string request = 1;
}